# FastComplex-Benchmark

./: .gitignore  CMakeLists.txt  README.md  meson.build
.github/workflows/: build_and_test.yml
include/: aligned_allocator.hpp  complex_soa.hpp  fft_stress_test.hpp  linear_algebra_soa.hpp
scripts/: plot_results.py
src/: benchmark_main.cpp  tests.cpp
subprojects/: google-benchmark.wrap
